// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BottomPagination > renders on first page 1`] = `
<DocumentFragment>
  <ul
    aria-label="Pagination"
    class="f1l63s56"
    role="navigation"
  >
    <li
      class="previous disabled"
    >
      <a
        aria-disabled="true"
        aria-label="Previous page"
        class=" "
        rel="prev"
        role="button"
        tabindex="-1"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.2339 15C12.4444 15 12.6316 14.933 12.7719 14.799C13.076 14.531 13.076 14.062 12.7719 13.794L8.81871 9.99721L12.7719 6.22278C13.076 5.95477 13.076 5.48576 12.7719 5.21776C12.4912 4.92741 12 4.92741 11.7193 5.21776L7.22807 9.50586C6.92398 9.77387 6.92398 10.2429 7.22807 10.5109L11.7193 14.799C11.8596 14.933 12.0468 15 12.2339 15Z"
            fill="currentcolor"
          />
        </svg>
      </a>
    </li>
    <li
      class="selected"
    >
      <a
        aria-current="page"
        aria-label="Page 1 is your current page"
        rel="canonical"
        role="button"
        tabindex="-1"
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-label="Page 2"
        rel="next"
        role="button"
        tabindex="0"
      >
        2
      </a>
    </li>
    <li>
      <a
        aria-label="Page 3"
        role="button"
        tabindex="0"
      >
        3
      </a>
    </li>
    <li>
      <a
        aria-label="Page 4"
        role="button"
        tabindex="0"
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-label="Page 5"
        role="button"
        tabindex="0"
      >
        5
      </a>
    </li>
    <li
      class="next"
    >
      <a
        aria-disabled="false"
        aria-label="Next page"
        class=""
        rel="next"
        role="button"
        tabindex="0"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.76608 15C7.55556 15 7.36842 14.933 7.22807 14.799C6.92398 14.531 6.92398 14.062 7.22807 13.794L11.1813 9.99721L7.22807 6.22278C6.92398 5.95477 6.92398 5.48576 7.22807 5.21776C7.50877 4.92741 8 4.92741 8.2807 5.21776L12.7719 9.50586C13.076 9.77387 13.076 10.2429 12.7719 10.5109L8.2807 14.799C8.14035 14.933 7.95322 15 7.76608 15Z"
            fill="currentcolor"
          />
        </svg>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`BottomPagination > renders on third page 1`] = `
<DocumentFragment>
  <ul
    aria-label="Pagination"
    class="f1l63s56"
    role="navigation"
  >
    <li
      class="previous"
    >
      <a
        aria-disabled="false"
        aria-label="Previous page"
        class=""
        rel="prev"
        role="button"
        tabindex="0"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.2339 15C12.4444 15 12.6316 14.933 12.7719 14.799C13.076 14.531 13.076 14.062 12.7719 13.794L8.81871 9.99721L12.7719 6.22278C13.076 5.95477 13.076 5.48576 12.7719 5.21776C12.4912 4.92741 12 4.92741 11.7193 5.21776L7.22807 9.50586C6.92398 9.77387 6.92398 10.2429 7.22807 10.5109L11.7193 14.799C11.8596 14.933 12.0468 15 12.2339 15Z"
            fill="currentcolor"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        aria-label="Page 1"
        role="button"
        tabindex="0"
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-label="Page 2"
        rel="prev"
        role="button"
        tabindex="0"
      >
        2
      </a>
    </li>
    <li
      class="selected"
    >
      <a
        aria-current="page"
        aria-label="Page 3 is your current page"
        rel="canonical"
        role="button"
        tabindex="-1"
      >
        3
      </a>
    </li>
    <li>
      <a
        aria-label="Page 4"
        rel="next"
        role="button"
        tabindex="0"
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-label="Page 5"
        role="button"
        tabindex="0"
      >
        5
      </a>
    </li>
    <li
      class="next"
    >
      <a
        aria-disabled="false"
        aria-label="Next page"
        class=""
        rel="next"
        role="button"
        tabindex="0"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.76608 15C7.55556 15 7.36842 14.933 7.22807 14.799C6.92398 14.531 6.92398 14.062 7.22807 13.794L11.1813 9.99721L7.22807 6.22278C6.92398 5.95477 6.92398 5.48576 7.22807 5.21776C7.50877 4.92741 8 4.92741 8.2807 5.21776L12.7719 9.50586C13.076 9.77387 13.076 10.2429 12.7719 10.5109L8.2807 14.799C8.14035 14.933 7.95322 15 7.76608 15Z"
            fill="currentcolor"
          />
        </svg>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
